--- a/aMuse/MainWindow.xaml
+++ b/aMuse/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="HELLO" HorizontalAlignment="Left" Margin="345,171,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </Window>
