Added simple LiricsPage Added lirics to test track.mp3

--- a/aMuse.UI/MainPage.xaml
+++ b/aMuse.UI/MainPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:aMuse.UI"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="600"
       Title="MainPage">
 
     <Grid>
@@ -25,7 +25,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        
+        <Button  Click="Button_ClickToLirics" Grid.Row="1" Grid.RowSpan="2"  Grid.Column="3"/>
+        <Button  Visibility="Hidden" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0"/>
         <Image  Width="350" Height="350"  
                 Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="2" Source="testAlbumCover.jpg"
                 />
