--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -25,9 +25,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3" >
-            <Wpf:VlcControl  x:Name="vlcPlayer" Height="0" >
-
-            </Wpf:VlcControl>
+            <Wpf:VlcControl  x:Name="vlcPlayer" Height="0"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="3" VerticalAlignment="Center" Grid.Column="1" 
                     Grid.ColumnSpan="3" RenderTransformOrigin="0.515,0.533" >
@@ -36,33 +34,34 @@
                 Cursor="Hand"
                    MouseLeftButtonDown="Image_MouseLeftButtonDown"
                  Source="testAlbumCover.jpg"/>
-            <TextBlock Name="infoBox" TextWrapping="Wrap" Text="TextBlock" Height="23" Width="150" FontSize="14" FontWeight="Bold"/>
-            <Button  x:Name="Previous" Width="50" Height="30" 
-                     Click="Previous_Click" Margin="15,0,0,0" HorizontalContentAlignment="Center"  >
-                <Image Source="Icons/Rewind_52px.png" />
-            </Button>
-            <Button  x:Name="PlayPauseButton" Width="50" Height="30" HorizontalContentAlignment="Center"  
-                     Click="PlayPause_Click" Margin="15,0,0,0"  >
-                <Image x:Name="imageInside" Source="Icons/Play_52px.png"  />
-
-            </Button>
-            <Button  x:Name="Next" Width="50" Height="30" HorizontalContentAlignment="Center"
-                     Click="Next_Click" Margin="15,0,0,0"  >
-                <Image Source="Icons/Fast Forward_52px.png" />
-            </Button>
-            <Button  x:Name="MuteButton" Width="50" Height="30" HorizontalContentAlignment="Center"
-                     Click="Mute_Click" Margin="15,0,0,0"  >
-                <Image Source="Icons/Mute_52px.png" />
-            </Button>
-            <TextBlock Foreground="White" VerticalAlignment="Center" Margin="5"  ><Run Text="Volume"/></TextBlock>
-            <Slider  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
+            <TextBlock Name="infoBox" TextWrapping="Wrap" Text="TextBlock"
+                       Height="23" Width="150" FontSize="14" FontWeight="Bold"/>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0 10 0 15">
+                <Button  x:Name="Previous" Width="50" Height="30" 
+                     Click="Previous_Click" Margin="15 0 0 0" HorizontalContentAlignment="Center"  >
+                    <Image Source="Icons/Rewind_52px.png" />
+                </Button>
+                <Button  x:Name="PlayPauseButton" Width="50" Height="30" HorizontalContentAlignment="Center"  
+                     Click="PlayPause_Click" Margin="15 0 0 0"  >
+                    <Image x:Name="imageInside" Source="Icons/Play_52px.png"/>
+                </Button>
+                <Button  x:Name="Next" Width="50" Height="30" HorizontalContentAlignment="Center"
+                     Click="Next_Click" Margin="15 0 0 0"  >
+                    <Image Source="Icons/Fast Forward_52px.png" />
+                </Button>
+                <Button  x:Name="MuteButton" Width="50" Height="30" HorizontalContentAlignment="Center"
+                     Click="Mute_Click" Margin="15 0 0 0"  >
+                    <Image Source="Icons/Mute_52px.png" />
+                </Button>
+                <TextBlock Foreground="White" VerticalAlignment="Center" Margin="5"  ><Run Text="Volume"/></TextBlock>
+                <Slider  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
        Minimum="0" Maximum="100" Value="80" Width="70"/>
-
-
+            </StackPanel>
+            
         </StackPanel>
         <Frame Name="MainFrame" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3"
                 NavigationUIVisibility="Hidden"
-               Margin="0,0,0,0">
+               Margin="0">
         </Frame>
     </Grid>
 </Window>
