--- a/aMuse.UI/LyricsPage.xaml
+++ b/aMuse.UI/LyricsPage.xaml
@@ -10,11 +10,10 @@
 
     <Grid>
         <Grid.Background>
-            <SolidColorBrush Color="{DynamicResource GreenBrush}"/>
+            <SolidColorBrush Color="#FF363636"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-
             <ColumnDefinition />
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -23,8 +22,11 @@
             <RowDefinition />
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="3">
-            <TextBlock    x:Name="liricsBox" Text="test" />
+        <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="3" FontSize="16" FontWeight="Bold" >
+            <TextBlock  Margin="0 30 0 15" TextAlignment="Center"  x:Name="liricsBox" Text="test" Background="#FF363636" Foreground="#FFDCFAFA" />
         </ScrollViewer>
+        <Button Width="50" Height="30" Click="Button_ClickBack" Grid.Row="0"   Grid.Column="0" HorizontalAlignment="Left"  VerticalAlignment="Top">
+            <Image x:Name="imageInside" Source="Icons/Undo_52px.png"  />
+        </Button>
     </Grid>
 </Page>
