--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -9,11 +9,11 @@
         xmlns:Wpf1="clr-namespace:Vlc.DotNet.Forms;assembly=Vlc.DotNet.Forms" x:Class="aMuse.UI.MainWindow"
         mc:Ignorable="d"
 
-        Title="MainWindow" Height="550" Width="800">
+        Title="MainWindow" MinHeight="500" MinWidth="850" Height="550" Width="850">
 
-    <Grid Background="#FF235543">
+    <Grid Background="#FF2C2C2C">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80"/>
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -22,55 +22,72 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition />
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="130"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3" >
-            <Wpf:VlcControl x:Name="vlcPlayer" Height="0"> </Wpf:VlcControl>
+        <StackPanel Width="auto" Grid.RowSpan="4" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Background="#FF222222" >
+
+            <Button  Margin="0 0 0 2" Height="40" >
+                <StackPanel Margin="5 0 5 0" MinWidth="120" Width="auto" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <Image Margin="0 0 0 0" HorizontalAlignment="Left" Source="Icons/Music Folder_52px.png"/>
+                    <TextBlock VerticalAlignment="Center" Margin="10 10 0 10"  Text="Music Folder" Foreground="#FFDCFAFA" FontSize="16"/>
+                </StackPanel>
+
+            </Button>
+            <Button  Margin="0 0 0 2" Height="40" />
+            <Button Margin="0 0 0 2" Height="40" />
+            <Button Margin="0 0 0 2" Height="40" />
         </StackPanel>
-        <Grid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3">
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3" >
+            <Wpf:VlcControl x:Name="vlcPlayer" Height="0"></Wpf:VlcControl>
+        </StackPanel>
+        <Grid  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Background="#FF2C2C2C">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="80"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
-            
-            <Slider Margin="20 10 20 0" Height="15" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"  BorderThickness="0"
+            <Slider Style="{StaticResource Horizontal_Slider}" Margin="20 15 40 0" Height="15" 
+                    Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3"  BorderThickness="0"
                     Name="TrackBar" PreviewMouseLeftButtonDown="TrackBar_PreviewMouseLeftButtonDown"
                     PreviewMouseLeftButtonUp="TrackBar_PreviewMouseLeftButtonUp"
                     ValueChanged="TrackBar_ValueChanged" IsEnabled="False"/>
-            <Image Margin="0 5 10 5" Height="110"   
+            <StackPanel Margin="15 10 0 0" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MaxWidth="200" MinWidth="100">
+                <TextBlock Name="textBlockTime" Text="Time" FontSize="15" Foreground="#FFDCFAFA"/>
+                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" TextWrapping="Wrap" Text="Artist4444444444444" Height="23" MaxWidth="110"  Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxTrackName" TextWrapping="Wrap" Text="Song44444444444" Height="23" MaxWidth="110" Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+            </StackPanel>
+            <Image Margin="0 0 0 0"  Height="130"   VerticalAlignment="Bottom"
                 Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"   
-                Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown" x:Name="Thumbnail"/>
-            <StackPanel Margin="20 0 50 0" Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Center" Grid.Column="1" 
-                    Grid.ColumnSpan="2"  >
-                <StackPanel Width="100">
-                    <TextBlock Name="textBlockTime" Text="Time" FontSize="15"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" TextWrapping="Wrap" Text="Artist" Height="23" Width="150" FontSize="14" FontWeight="Bold"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" x:Name="infoBoxTrackName" TextWrapping="Wrap" Text="Song" Height="23" Width="150" FontSize="14" FontWeight="Bold"/>
-                </StackPanel>
-                <Button x:Name="Previous" Width="50" Height="30" 
+                Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown" Source="testAlbumCover.jpg" x:Name="Thumbnail"/>
+            <StackPanel   Margin="50 0 0 0" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1" 
+                          VerticalAlignment="Stretch" Grid.Column="1" 
+                            Grid.ColumnSpan="3" Width="auto"  >
+
+                <Button HorizontalAlignment="Left" x:Name="Previous" MinWidth="50" Width="auto" Height="30" 
                      Click="Previous_Click" Margin="15 0 0 0" HorizontalContentAlignment="Center"  >
                     <Image Source="Icons/Rewind_52px.png"/>
                 </Button>
-                <Button x:Name="PlayPauseButton" Width="50" Height="30" HorizontalContentAlignment="Center"  
+                <Button HorizontalAlignment="Left" x:Name="PlayPauseButton" MinWidth="50" Width="auto" Height="30" HorizontalContentAlignment="Center"  
                      Click="PlayPause_Click" Margin="15 0 0 0" MouseLeave="PlayPauseButton_MouseLeave">
                     <Image x:Name="imageInside" Source="Icons/Play_52px.png"  />
                 </Button>
-                <Button  x:Name="Next" Width="50" Height="30" HorizontalContentAlignment="Center"
+                <Button HorizontalAlignment="Left"  x:Name="Next" MinWidth="50" Width="auto" Height="30" HorizontalContentAlignment="Center"
                      Click="Next_Click" Margin="15 0 0 0"  >
                     <Image Source="Icons/Fast Forward_52px.png" />
                 </Button>
-                <Button  x:Name="MuteButton" Width="50" Height="30" HorizontalContentAlignment="Center"
+                <Button HorizontalAlignment="Left"  x:Name="MuteButton" MinWidth="50" Width="auto" Height="30" HorizontalContentAlignment="Center"
                      Click="Mute_Click" Margin="15 0 0 0"  >
                     <Image Source="Icons/Mute_52px.png" />
                 </Button>
-                <TextBlock Foreground="White" VerticalAlignment="Center" Margin="5" ><Run Text="Volume"/></TextBlock>
-                <Slider  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
-                            Minimum="0" Maximum="100" Value="80" Width="70"/>
+                <TextBlock HorizontalAlignment="Left"  Foreground="White" VerticalAlignment="Center" Margin="5" ><Run Text="Volume"/></TextBlock>
+                <Slider HorizontalAlignment="Left"  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
+                            Minimum="0" Maximum="100" Value="80" Width="70"
+                         Style="{StaticResource Horizontal_Slider}"/>
             </StackPanel>
         </Grid>
         <Frame Name="MainFrame" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3"
