--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -38,7 +38,7 @@
         <StackPanel Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3" >
             <Wpf:VlcControl x:Name="Player" Height="0"></Wpf:VlcControl>
         </StackPanel>
-        <Grid  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Background="#FF2C2C2C">
+        <Grid x:Name="LayoutRoot"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Background="#FF2C2C2C">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto" />
@@ -54,13 +54,23 @@
                     Name="TrackBar" PreviewMouseLeftButtonDown="TrackBar_PreviewMouseLeftButtonDown"
                     PreviewMouseLeftButtonUp="TrackBar_PreviewMouseLeftButtonUp" IsEnabled="False"/>
             <StackPanel Margin="15 10 0 0" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MaxWidth="200" MinWidth="100">
-                <TextBlock Name="textBlockTime" Text="Time" FontSize="15" Foreground="#FFDCFAFA"/>
-                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" TextWrapping="Wrap" Text="Artist4444444444444" Height="23" MaxWidth="110"  Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA"/>
-                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxTrackName" TextWrapping="Wrap" Text="Song44444444444" Height="23" MaxWidth="110" Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                <TextBlock Name="textBlockTime" Text="00:00" FontSize="15" Foreground="#FFDCFAFA"/>
+                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxTrackName" 
+                           TextWrapping="Wrap" Text="Song44444444444" Height="23" MaxWidth="110" Width="auto" FontSize="14" FontWeight="Bold" Foreground="#FFDCFAFA" >
+                    <TextBlock.ToolTip>
+                        <ToolTip x:Name="toolTipTrack" ToolTip.Opened="ToolTipTrack_Opened" Background="#FF767676" Foreground="#FFDCFAFA" HasDropShadow="False" FontWeight="Bold" FontSize="14" Placement="Relative" HorizontalOffset="25" VerticalOffset="10" BorderBrush="{x:Null}" />
+                    </TextBlock.ToolTip>
+                </TextBlock>
+                <TextBlock TextTrimming="WordEllipsis" Grid.Column="1" Grid.Row="0" x:Name="infoBoxArtist" TextWrapping="Wrap" Text="Artist4444444444444" Height="23" MaxWidth="110"  Width="auto" FontSize="14"  Foreground="#FFDCFAFA">
+                    <TextBlock.ToolTip>
+                        <ToolTip x:Name="toolTipArtist" ToolTip.Opened="ToolTipArtist_Opened" Background="#FF767676" Foreground="#FFDCFAFA" HasDropShadow="False"  FontSize="14" Placement="Relative" HorizontalOffset="25" VerticalOffset="10" BorderBrush="{x:Null}" />
+                    </TextBlock.ToolTip>
+                </TextBlock>
+
             </StackPanel>
             <Image Margin="0 0 0 0"  Height="130"   VerticalAlignment="Bottom"
                 Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"   
-                Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown" Source="testAlbumCover.jpg" x:Name="Thumbnail"/>
+                Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown"  Source="Icons/music-record-small.png" x:Name="Thumbnail"/>
             <StackPanel   Margin="50 0 0 0" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1" 
                           VerticalAlignment="Stretch" Grid.Column="1" 
                             Grid.ColumnSpan="3" Width="auto"  >
@@ -77,11 +87,13 @@
                      Click="Next_Click" Margin="15 0 0 0"  >
                     <Image Source="Icons/Fast Forward_52px.png" />
                 </Button>
-                <Button HorizontalAlignment="Left"  x:Name="MuteButton" MinWidth="50" Width="auto" Height="30" HorizontalContentAlignment="Center"
+                <!--<Button HorizontalAlignment="Left"  x:Name="MuteButton" MinWidth="50" Width="auto" Height="30" HorizontalContentAlignment="Center"
                      Click="Mute_Click" Margin="15 0 0 0"  >
                     <Image Source="Icons/Mute_52px.png" />
-                </Button>
-                <TextBlock HorizontalAlignment="Left"  Foreground="White" VerticalAlignment="Center" Margin="5" ><Run Text="Volume"/></TextBlock>
+                </Button>-->
+                <Image x:Name="volumeChanger"  MouseLeftButtonDown="VolumeChanger_MouseLeftButtonDown"  Margin="15 0 5 0" 
+                       Height="18" Width="18" Source="Icons/Speaker_52px.png" />
+                <!--<TextBlock HorizontalAlignment="Left"  Foreground="White" VerticalAlignment="Center" Margin="5" ><Run Text="Volume"/></TextBlock>-->
                 <Slider HorizontalAlignment="Left"  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
                             Minimum="0" Maximum="100" Value="80" Width="70"
                          Style="{StaticResource Horizontal_Slider}"/>
