--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="130"/>
         </Grid.RowDefinitions>
         <StackPanel Width="auto" Grid.RowSpan="4" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Background="#FF222222" >
-            <Button  Margin="0 0 0 2" Height="40" >
+            <Button Click="Button_ClickToLibrary" Margin="0 0 0 2" Height="40" >
                 <StackPanel Margin="5 0 5 0" MinWidth="120" Width="auto" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                     <Image Margin="0 0 0 0" HorizontalAlignment="Left" Source="Icons/Music Folder_52px.png"/>
                     <TextBlock VerticalAlignment="Center" Margin="10 10 0 10"  Text="Music Folder" Foreground="#FFDCFAFA" FontSize="16"/>
