--- a/aMuse.UI/MusicLibrary.xaml
+++ b/aMuse.UI/MusicLibrary.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="aMuse.UI.PlaylistsPage"
+﻿<Page x:Class="aMuse.UI.MusicLibrary"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,14 @@
       xmlns:local="clr-namespace:aMuse.UI"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="700"
-      Title="PlaylistsPage">
+      Title="MusicLibrary" Background="#FF363636">
 
     <Grid  Background="#FF363636">
         <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
-            <ListBox Margin="15 0 15 0" x:Name="listTracks" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid HorizontalAlignment="Stretch" Background="#FF363636">
+            <ListBox Selected="ListTracks_TrackSelected" Margin="15 0 15 0" x:Name="listTracks" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
+                <ListBox.ItemTemplate >
+                    <DataTemplate >
+                        <Grid  HorizontalAlignment="Stretch" Background="#FF363636">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition MinWidth="200" Width="Auto"/>
                                 <ColumnDefinition MinWidth="200" Width="Auto" />
