--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -26,12 +26,26 @@
         </Grid.RowDefinitions>
         <StackPanel Width="auto" Grid.RowSpan="4" HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Background="#FF222222" >
             <Button Click="Button_ClickToLibrary" Margin="0 0 0 2" Height="40" >
-                <StackPanel Margin="5 0 5 0" MinWidth="120" Width="auto" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
-                    <Image Margin="0 0 0 0" HorizontalAlignment="Left" Source="Icons/Music Folder_52px.png"/>
-                    <TextBlock VerticalAlignment="Center" Margin="10 10 0 10"  Text="Music Folder" Foreground="#FFDCFAFA" FontSize="16"/>
-                </StackPanel>
+                <Grid MinWidth="150">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Column="0" Margin="5 0 5 0" HorizontalAlignment="Left" Source="Icons/Music Folder_52px.png"/>
+                    <TextBlock Grid.Column="1" VerticalAlignment="Center" Margin=" 8 0 8 0"  Text="Music Folder" Foreground="#FFDCFAFA" FontSize="16" FontWeight="Bold"/>
+                </Grid>
             </Button>
-            <Button  Margin="0 0 0 2" Height="40" />
+            <Button Click="Button_Click" Margin="0 0 0 2" Height="40" >
+                <Grid MinWidth="150">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image Grid.Column="0" Margin="0 0 0 0" HorizontalAlignment="Left" Source="Icons/Playlist_96px.png"/>
+                    <TextBlock Grid.Column="1" VerticalAlignment="Center" Margin=" 8 0 8 0"  Text="Playlists" Foreground="#FFDCFAFA" FontSize="16" FontWeight="Bold"/>
+                </Grid>
+            </Button>
             <Button Margin="0 0 0 2" Height="40" />
             <Button Margin="0 0 0 2" Height="40" />
         </StackPanel>
@@ -97,6 +111,8 @@
                 <Slider HorizontalAlignment="Left"  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
                             Minimum="0" Maximum="100" Value="80" Width="70"
                          Style="{StaticResource Horizontal_Slider}"/>
+                <Image x:Name="favorite"  MouseLeftButtonDown="favorite_Add"  Margin="15 0 5 0" 
+                       Height="26" Width="26" Source="Icons/Heart_52px.png" />
             </StackPanel>
         </Grid>
         <Frame Name="MainFrame" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3"
