--- a/aMuse.UI/PlaylistPage.xaml
+++ b/aMuse.UI/PlaylistPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="aMuse.UI.MusicLibrary"
+﻿<Page x:Class="aMuse.UI.PlaylistPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:aMuse.UI"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="700"
-      Title="MusicLibrary" Background="#FF363636">
+      Title="PlaylistPage" Background="#FF363636">
 
     <Grid  Background="#FF363636">
         <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
@@ -18,13 +18,16 @@
                                 <ColumnDefinition MinWidth="200" Width="Auto"/>
                                 <ColumnDefinition MinWidth="200" Width="Auto" />
                                 <ColumnDefinition MinWidth="200" Width="Auto"/>
+                                <ColumnDefinition MinWidth="50" Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock TextTrimming="WordEllipsis"   Margin="0 0 15 0" Grid.Column="0" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Track}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" MaxWidth="220" Text="Title" FontWeight="Bold" Foreground="#FFDCFAFA"/>
                             <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="1" VerticalAlignment="Center" 
                                    FontSize="20" MaxWidth="220" Text="ALBUM NAME MuSt Be HeRe" FontWeight="Bold" Foreground="#FFDCFAFA"/>
                             <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="2" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Artist}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" MaxWidth="220" Text="Artest" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                            <Image  Width="36" Height="36"  MouseLeftButtonDown="ClickDeleteFromFavorites" 
+                         Grid.Column="3" Grid.RowSpan="2" Source="Icons/Cross_52px.png"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
