--- a/aMuse.UI/LyricsPage.xaml
+++ b/aMuse.UI/LyricsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:aMuse.UI"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="700"
       Title="LiricsPage">
 
     <Grid>
@@ -22,7 +22,7 @@
             <RowDefinition />
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="3" FontSize="16" FontWeight="Bold" >
+        <ScrollViewer ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Visible" Template="{StaticResource ScrollViewerControlTemplate}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="3" FontSize="16"  >
             <TextBlock  Margin="0 30 0 15" TextAlignment="Center"  x:Name="liricsBox" Text="test" Background="#FF363636" Foreground="#FFDCFAFA" />
         </ScrollViewer>
         <Button Width="50" Height="30" Click="Button_ClickBack" Grid.Row="0"   Grid.Column="0" HorizontalAlignment="Left"  VerticalAlignment="Top">
