--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -35,7 +35,7 @@
                     <TextBlock Grid.Column="1" VerticalAlignment="Center" Margin=" 8 0 8 0"  Text="Music Folder" Foreground="#FFDCFAFA" FontSize="16" FontWeight="Bold"/>
                 </Grid>
             </Button>
-            <Button Click="Button_Click" Margin="0 0 0 2" Height="40" >
+            <Button Click="Button_ClickPlaylists" Margin="0 0 0 2" Height="40" >
                 <Grid MinWidth="150">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
@@ -82,7 +82,7 @@
                 </TextBlock>
 
             </StackPanel>
-            <Image Margin="0 0 0 0"  Height="130"   VerticalAlignment="Bottom"
+            <Image Margin="0 0 0 0"  Height="130"  Width="130"  VerticalAlignment="Bottom"
                 Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"   
                 Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown"  Source="Icons/music-record-small.png" x:Name="Thumbnail"/>
             <StackPanel   Margin="70 0 0 0" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1" 
@@ -116,7 +116,7 @@
                 <Slider HorizontalAlignment="Left"  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
                             Minimum="0" Maximum="100" Value="80" Width="70"
                          Style="{StaticResource Horizontal_Slider}"/>
-                <Image x:Name="favorite"  MouseLeftButtonDown="favorite_Add"  Margin="15 0 5 0" 
+                <Image x:Name="favorite"  MouseLeftButtonDown="Favorite_Add"  Margin="15 0 5 0" 
                        Height="26" Width="26" Source="Icons/Heart_52px.png" />
             </StackPanel>
         </Grid>
