--- a/aMuse.UI/PlaylistsPage.xaml
+++ b/aMuse.UI/PlaylistsPage.xaml
@@ -10,13 +10,13 @@
 
     <Grid  Background="#FF363636">
         <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
-            <ListBox MouseDoubleClick="ListTracks_MouseDoubleClick" Margin="15 0 15 0" x:Name="listTracks" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
+            <ListBox MouseDoubleClick="ListTracks_MouseDoubleClick" Margin="15 0 15 0" x:Name="listPlaylists" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid HorizontalAlignment="Stretch" Background="#FF363636">
                             
                             <TextBlock   Margin="0 15 0 0"  VerticalAlignment="Center" 
-                                   FontSize="20" Text="{Binding Playlist.Name}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" Text="{Binding Name}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
